pyquest/ql/test/semantic_analysis/invalid/test026.ql
// Incompatible result type for and operation
form testForm {
	"First Question"
	someIdentifier : integer = True && True
}